<resources>
    <string name="app_name">conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="feed">Feed</string>
    <string name="fetch_feed">fetch feed</string>
    <string name="menu_auth">Login/Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="my_feed">My Feed</string>
    <string name="email_id">Email Id</string>
    <string name="bio">Bio</string>
    <string name="username">Username</string>
    <string name="url_of_profile_image">Url of profile Image</string>
    <string name="update_settings">Update Settings</string>
    <string name="settings">Settings</string>
    <string name="article_title">Title of the Article</string>
    <string name="loren_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="article">Article</string>
    <string name="article_id">ARTICLE_ID</string>
    <string name="logout">Logout</string>
</resources>