<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <EditText
        android:layout_margin="8dp"
        android:hint="@string/url_of_profile_image"
        android:id="@+id/imageEditText"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_margin="8dp"
        android:hint="@string/username"
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_margin="8dp"
        android:hint="@string/bio"
        android:lines="5"
        android:gravity="top"
        android:id="@+id/bioEditText"
        android:layout_width="match_parent"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_margin="8dp"
        android:hint="@string/email_id"
        android:id="@+id/emailEditText"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_margin="8dp"
        android:hint="@string/password"
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_settings"
        android:layout_gravity="center"
        android:id="@+id/btn_update"/>

</LinearLayout>