<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">

<TextView
    android:id="@+id/titleTextView"
    tools:text="@string/article_title"
    android:padding="4dp"
    android:layout_width="match_parent"
    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
    android:maxLines="2"
    android:layout_height="wrap_content"/>

    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="28dp"
            android:layout_height="32dp"
            tools:background="@color/conduit_green" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/authorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                tools:text="@string/user_name"/>
            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                tools:text="12-dec-2021"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/bodyTextView"
        android:padding="4dp"
        tools:text="@string/loren_ipsum"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_height="wrap_content"/>

</LinearLayout>